# linc

./: .gitignore  Cargo.toml  README.md
examples/: hollow.rs  hollow_shellcode.rs  inject_hollow_procfs_shellcode.rs  inject_hollow_shellcode.rs  inject_procfs_overwrite_rip_shellcode.rs  inject_ptrace_overwrite_rip_shellcode.rs  memfd.rs  memfd_executable.rs  memfd_shellcode.rs  spawn_hollow_shellcode.rs  spawn_memfd_executable.rs  spawn_memfd_shellcode.rs  spawn_procfs_overwrite_rip_shellcode.rs  spawn_ptrace_overwrite_rip_shellcode.rs
examples/anon_file/: main.rs
examples/inject/: main.rs
inject/: Cargo.toml
inject/src/: cli.rs  main.rs  utils.rs
libinject/: Cargo.toml
libinject/examples/: anon_file.rs  hollow.rs  memfd.rs
libinject/src/: core.rs  lib.rs  utils.rs
src/: core.rs  elf.rs  error.rs  lib.rs  payload.rs  techniques.rs  utils.rs
src/primitives/: mod.rs  procfs.rs  ptrace.rs
src/techniques/: inject.rs  mod.rs  spawn.rs
tests/: payload_tests.rs
tests/utils/: mod.rs
