[package]
name = "linc"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "A Crate for process injection and fileless ELF execution on Linux."
repository = "https://github.com/dustyw0lf/linc"
keywords = ["linux"]

[features]
default = ["http"]
http = ["dep:ureq"]

[dependencies]
binary-layout = "4.0.2"
nix = { version = "0.29", features = ["mqueue", "ptrace"] }
ureq = { version = "2.10.1", optional = true }
