[package]
name = "linc"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "A Crate for process injection and fileless ELF execution on Linux."
repository = "https://github.com/dustyw0lf/linc"
keywords = ["linux"]
include = ["src", "Cargo.toml", "README.md"]

[features]
default = []
http = ["dep:ureq"]

[dependencies]
exeutils = { git = "https://github.com/dustyw0lf/exeutils.git", version = "0.1.0", features = [
    "elf64",
] }
nix = { version = "0.29", features = ["mqueue", "ptrace"] }
ureq = { version = "2.10.1", optional = true }

[dev-dependencies]
tempfile = "3.13.0"
