[package]
name = "linc"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "A Crate for process injection and fileless ELF execution on Linux."
repository = "https://github.com/dustyw0lf/linc"
keywords = ["linux"]
include = ["src", "Cargo.toml", "README.md"]

[features]
default = []
http = ["dep:ureq"]

[dependencies]
exeutils = { git = "https://github.com/dustyw0lf/exeutils.git", version = "0.1.0", features = [
    "elf64",
] }
nix = { version = "0.29", features = ["mqueue", "ptrace"] }
ureq = { version = "2.10.1", optional = true }

[dev-dependencies]
tempfile = "3.13.0"
# Make exmples requiring features work with `cargo run --example <example>`
linc = { path = ".", features = ["http"] }

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "warn"
# Lints to allow
must_use_candidate = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
