[package]
name = "inject"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
description = "A CLI interface for the libinject crate."

[[bin]]
name = "inject"

[dependencies]
libinject = { path = "../libinject" }
clap = { version = "4.5.11", features = ["cargo"] }
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "default-tls",
    "http2",
] }
