[package]
name = "libinject"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
description = "Rust for process injection on Linux."

[dependencies]
nix = { version = "0.29", features = ["ptrace", "mqueue"] }
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "charset",
    "default-tls",
    "http2",
] }
