[package]
name = "libinject"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "Crate for process injection and fileless ELF execution on Linux."
repository = "https://github.com/dustyw0lf/libinject-linux"

[dependencies]
nix = { version = "0.29", features = ["ptrace", "mqueue"] }

[dev-dependencies]
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "default-tls",
    "http2",
] }

[profile.release]
strip = true
opt-level = 3     # 3 enables all optimizations, "s" trades runtime speed for size
lto = true        # also called "fat" lto. Attempts to perform optimizations across all crates within the dependency graph
codegen-units = 1
# panic = "abort" # do not unwind the stack and clean data
